--- a/npy.ipynb
+++ b/npy.ipynb
@@ -440,10 +440,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#######error rsolved\n",
+    "a=5*10"
+   ]
   }
  ],
  "metadata": {
